--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </header>
     <section class="container">
         <div class="products">
-            <div class="carts">
+           <div class="carts">
                 <div>
                     <img src="./image/Producto-1.jpeg" alt="">
                     <p><span>3000</span>$</p>
@@ -189,7 +189,7 @@
 
     <!-- Libreria javascript -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
+    <!-- Fin Libreria javascript -->
     <script>
         function showCart(x){
             document.getElementById("products-id").style.display = "block";
@@ -199,7 +199,7 @@
         }
 
     </script>
-    <script src="./Js/script.js" ></script>
+    <script src="./Js/script.js" ></script> 
     <script src="./Js/app.js"></script>
 </body>
 </html>
