--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                         </li>
                       </ul>
                       <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Buscar</button>
+                        <input class="form-control me-2" type="search" placeholder="Search" id="BuscarProcuctos" onkeypress="buscarProductos()" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit" onclick="buscarProductos()" >Buscar</button>
                       </form>
                     </div>
                 </div>
@@ -201,5 +201,6 @@
     </script>
     <script src="./Js/script.js" ></script> 
     <script src="./Js/app.js"></script>
+    <script src="./Js/buscador.js"></script>
 </body>
 </html>
